# spectrs

./: Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: main.rs
